apis/shopper-baskets/examples/error/basket-transfer-exception.raml
#%RAML 1.0 NamedExample
value:
  {
      "type": "https://api.commercecloud.salesforce.com/documentation/error/v1/errors/basket-transfer-basket-already-exists-exception",
      "title": "Conflict",
      "detail": "The current customer with ID 'cdo7rJNie7ahERqXSb51Yvz2M4' has an active basket."
  }